--- a/templates/update_user_details.html
+++ b/templates/update_user_details.html
@@ -1,34 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1 class="center-align">Update Information for {{ user.username }}</h1>
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            <h1 class="user-info-heading center-align">Update Information for {{ user.username }}</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12">
+            <form class="edit-user" method="POST" action="{{ url_for('update_user_details', user_id=user._id) }}">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-user prefix left"></i>
+                        <input id="username" name="username" value="{{ user.username }}" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <label for="username">Username</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="fas fa-envelope prefix left"></i>
+                        <input id="email" name="email" value="{{ user.email_address }}" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
+                        <label for="email">Email address</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="fas fa-key prefix left"></i>
+                        <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <label for="password">Password</label>
+                    </div>
+                </div>
+                <!-- submit button -->
+                <div class="row center-align">
+                    <div class="col s12">
+                        <button type="submit" class="btn-large edit green darken-2">
+                            Update user information
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
-    <form method="POST" action="{{ url_for('update_user_details', user_id=user._id) }}">
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-user prefix left"></i>
-                <input id="username" name="username" value="{{ user.username }}" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                <label for="username">Username</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="fas fa-envelope prefix left"></i>
-                <input id="email" name="email" value="{{ user.email_address }}" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="validate" required>
-                <label for="email">Email address</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="fas fa-key prefix left"></i>
-                <input id="password" name="password" type="password" minlength="8" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                <label for="password">Password</label>
-            </div>
-        </div>
-        <!-- submit button -->
-        <div class="row center-align">
-            <div class="col s6 offset-s3">
-                <button type="submit" class="btn-large green darken-2">
-                    Update user information
-                </button>
-            </div>
-        </div>
-    </form>
 
 {% endblock %}
