--- a/templates/update_user_details.html
+++ b/templates/update_user_details.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
         <div class="col s12">
-            <form class="edit-user" method="POST" action="{{ url_for('update_user_details', user_id=user._id) }}">
+            <form class="edit-data" method="POST" action="{{ url_for('update_user_details', user_id=user._id) }}">
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-user prefix left"></i>
