--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -22,18 +22,18 @@
             {% if session.user %}
                 <div class="row">
                     <div class="col-s12">
-                        <h2><strong>No terms have been added to the dictionary yet. Be the first to contribute to our community by adding a definition below.</strong></h2>
+                        <h2 class="center-align"><strong>No terms have been added to the dictionary yet. Be the first to contribute to our community by adding a definition below.</strong></h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row center-align">
                     <div class="col-s12">
-                        <a href="{{ url_for('add_definition') }}" class="btn-large green">Add term</a>
+                        <a href="{{ url_for('add_definition') }}" class="btn-large add green">Add term</a>
                     </div>
                 </div>
                 {% else %}
                 <div class="row">
                     <div class="col-s12">
-                        <h2><strong>No terms have been added to the dictionary yet. Please <a href="{{ url_for('register') }}">register an account</a> to contribute to our community.</strong></h2>
+                        <h2 class="center-align"><strong>No terms have been added to the dictionary yet. Please <a href="{{ url_for('register') }}">register an account</a> to contribute to our community.</strong></h2>
                     </div>
                 </div>
             {% endif %}
