--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </section>
     </div>
     {% if session.user %}
-        <h1 class="center-align">Welcome, {{ session.user }}</h1>
+        <h1 class="center-align welcome-heading">Welcome, {{ session.user }}</h1>
     {% endif %}
     <div class="container search-container center-align">
         <div class="row">
@@ -39,11 +39,11 @@
                     <div class="row">
                         <div class="input-field col s12 m7 l8">
                             <i class="fas fa-search prefix"></i>
-                            <input id="query" name="query" type="text">
+                            <input id="query" name="query" type="text" minlength="3">
                             <label for="query">Search</label>
                         </div>
                         <div class="col s12 m5 l4 search-buttons">
-                            <a href="" class="red btn">Reset</a>
+                            <a href="{{ url_for('home_page') }}" class="red btn">Reset</a>
                             <button type="submit" class="btn teal">
                                 Search
                             </button>
@@ -57,7 +57,7 @@
         <div class="container contributions-container">
             <div class="row">
                 <div class="col s12">
-                    <h2 class="center-align">My contributions</h2>
+                    <h2 class="contributions-heading center-align">My Contributions</h2>
                 </div>
             </div>
             {% for term in terms %}
@@ -66,12 +66,15 @@
                         <div class="col s12 l3">
                             <span class="term-name"><strong>{{ term.term_name }}</strong></span>
                         </div>
-                        <div class="col s12 l8">
+                        <div class="col s12 l7">
                             <span>{{ term.term_definition }}</span>
                         </div>
-                        <div class="col s12 l1">
-                            <a href="{{ url_for('edit_term', term_id=term._id) }}" class="teal">
-                                <i class="fas fa-edit"></i>
+                        <div class="col s12 l2">
+                            <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small blue">
+                                <i class="fas fa-edit tooltipped" data-tooltip="EDIT TERM"></i>
+                            </a>
+                            <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-small red">
+                                <i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
                             </a>
                         </div>
                     </div>
