--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,21 @@
                 </div>
             </div>
             {% if not session.user %}
-            <div class="row btn-wrapper">
-                <div class="col s12">
-                    <a href="{{ url_for('register') }}" class="btn-large signup">Sign up now</a>
+                <div class="row btn-wrapper">
+                    <div class="col s12">
+                        <a href="{{ url_for('register') }}" class="btn-large signup">Sign up now</a>
+                    </div>
                 </div>
-            </div>
-            <div class="row btn-wrapper">
-                <div class="col s12">
-                    <a href="#search" class="btn-large search-btn">Search dictionary</a>
+                <div class="row btn-wrapper">
+                    <div class="col s12">
+                        <a href="#search" class="btn-large search-btn">Search dictionary</a>
+                    </div>
                 </div>
-            </div>
-            <div class="row login-notice-wrapper">
-                <div class="col s12">
-                    <span class="login-notice">Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
+                <div class="row login-notice-wrapper">
+                    <div class="col s12">
+                        <span class="login-notice">Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
+                    </div>
                 </div>
-            </div>
             {% endif %}
         </section>
     </div>
@@ -57,7 +57,7 @@
         <div class="container contributions-container">
             <div class="row">
                 <div class="col s12">
-                    <h2 class="contributions-heading center-align">My Contributions</h2>
+                    <h2 class="contributions-heading center-align">My Recent Contributions</h2>
                 </div>
             </div>
             {% for term in terms %}
@@ -68,6 +68,9 @@
                         </div>
                         <div class="col s12 l7">
                             <span>{{ term.term_definition }}</span>
+                            <br>
+                            <br>
+                            <span><em>Last updated&#58; {{ term.created_on }}</em></span>
                         </div>
                         <div class="col s12 l2">
                             <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small blue">
@@ -80,6 +83,34 @@
                     </div>
                 {% endif %}
             {% endfor %}
+            <div class="row center-align">
+                <div class="col s12">
+                    {% set total = [] %}
+                    {% for term in terms if session.user|lower == term.created_by|lower %}
+                        {% set i = term.contribution_value|int %}
+                        {% if total.append(i) %}
+                        {% endif %}
+                    {% endfor %}
+                    <p>
+                        {% if total|sum > 0 %}
+                            You have made {{ total|sum }} contributions so far.
+                        {% else %}
+                            You haven&#8217;t made any contributions yet. Click below to add your first&#33;
+                        {% endif %}
+                    </p>
+                </div>
+            </div>            
+            <div class="row center-align add-entry">
+                <div class="col-s12">
+                    <a href="{{ url_for('add_definition') }}" class="btn-large add green">
+                        {% if total|sum > 0 %}
+                            Add another&#33;
+                        {% else %}
+                            Add term
+                        {% endif %}
+                    </a>
+                </div>
+            </div>
         </div>
     {% else %}
         <div class="container maps-container center-align">
