--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,6 +16,13 @@
         <div class="row center-align">
             <div class="col s12">
                 <p>Username &#58; <span>{{ username }}</span></p>
+                {% set total = [] %}
+                {% for term in terms if session.user|lower == term.created_by|lower %}
+                    {% set i = term.contribution_value|int %}
+                    {% if total.append(i) %}
+                    {% endif %}
+                {% endfor %}
+                <p>Total contributions&#58; {{ total|sum }}</p>
                 <a href="{{ url_for('update_profile', username=username) }}" class="btn-large edit blue">Update Details</a>
             </div>
         </div>
