--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
                         SW5 7NL
                     </p>
                     <p class="maps-para"><i class="fas fa-phone-square"></i> &#40;078&#41; 11 033 461</p>
-                    <p class="maps-para"><i class="fas fa-at"></i> <a href="mailto:info@budgethelper.com">info&#64;budgethelper.com</a></p>
+                    <p class="maps-para"><i class="fas fa-at"></i> <a href="#">info&#64;fitipedia.com</a></p>
                     <p class="maps-para"><i class="fas fa-door-open"></i> Open Mon-Sun 6am - midnight</p>
                 </div>
                 <div class="col s12 l8">
