added logic to calculate remaining user contributions needed to reach legend status

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -66,9 +66,17 @@
                             {{ totals }}
                         {% endif %}
                     {% endfor %}
-                    <p> You have made {{ total|sum }} contributions so far.</p>
+                    {% set user_contributions = total|sum %}
+                    {% set legend_target = 20 %}
+                    {% set remaining_required = legend_target - user_contributions %}
+                    <p>
+                        You have made {{ total|sum }} {% if user_contributions != 1 %} contributions {% else %} contribution {% endif %}  so far. 
+                        {% if user_contributions < legend_target %} 
+                            Make another {{ remaining_required }} {% if remaining_required > 1 %} contributions {% else %} contribution {% endif %} to reach legend status&#33; {% else %} Congratulations&#33; You have reached legend status&#33;
+                        {% endif %}
+                    </p>
                 </div>
-            </div>            
+            </div>
             <div class="row center-align add-entry">
                 <div class="col-s12">
                     <a href="{{ url_for('add_definition') }}" class="btn-large add green">
