--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -38,20 +38,39 @@
                 </div>
             {% endif %}
         {% else %}
-            {% for letter in letters %}
-                <div class="letters-container">
-                    <div class="row">
-                        <div class="col-s12">
-                            <h1>{{ letter }}</h1>
-                        </div>
+            <div class="row">
+                <div class="col s12">
+                    <h2 class="center-align">Our current most popular terms</h2>
+                </div>
+            </div>
+            {% for term in popular_terms %}
+                <div class="row">
+                    <div class="col s12">
+                        <span class="term-name">{{ term.term_name }}</span>
+                    </div>
+                    <div class="col s12">
+                        <span>{{ term.term_definition }}</span>
+                    </div>
+                    <div class="col s12">
+                        {% if term.score >= 20 %}
+                            <span class="superscore">{{ term.score }}</span>
+                        {% else %}
+                            <span class="score">{{ term.score }}</span>
+                        {% endif %}
                     </div>
                 </div>
             {% endfor %}
+            <div class="row center-align">
+                <div class="col s12">
+                    <a href="#dictionary" class="btn-large blue">View full dictionary</a>
+                </div>
+            </div>
             <div class="row">
                 <div class="col s12">
                     <h3 class="key-terms">Key Terms</h2>
                 </div>
             </div>
+            <a name="dictionary"></a>
             <div class="terms-wrapper">
                 {% for term in terms %}
                     <div class="term-wrapper">               
