--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,19 @@
 
     <div class="jumbotron center-align">
         <section class="callout">
+            <div class="card">
+                <div class="card-content waves-effect waves-block waves-light">
+                    <h3>Welcome to Fitipedia. <span class="card-title activator grey-text text-darken-4">Click Here</span></h3>
+                </div>
+                <div class="card-reveal">
+                    <p><i class="fas fa-times right card-title"></i>
+                        Fitipedia is an online dictionary that explains fitness jargon.<br>
+                        To look for definitions, enter keywords in the search bar, e.g. weights.<br>
+                        As a registered user, you can add your own contributions, as well as update and delete them.<br>
+                        You can also upvote and downvote users&#8211; contributions by clicking on the buttons below the definition.
+                    </p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col s12">
                     <h1 class="jumbotron-header">The complete A&#8211;Z of fitness</h1>
@@ -20,11 +33,6 @@
                         <a href="#search" class="btn-large search-btn">Search dictionary</a>
                     </div>
                 </div>
-                <div class="row login-notice-wrapper">
-                    <div class="col s12">
-                        <span class="login-notice">Already registered? <a href="{{ url_for('login') }}">Log in</a>.</span>
-                    </div>
-                </div>
             {% endif %}
         </section>
     </div>
@@ -39,7 +47,7 @@
                     <div class="row">
                         <div class="input-field col s12 m7 l8">
                             <i class="fas fa-search prefix"></i>
-                            <input id="query" name="query" type="text" minlength="3">
+                            <input id="query" name="query" type="text" minlength="3" required>
                             <label for="query">Search</label>
                         </div>
                         <div class="col s12 m5 l4 search-buttons">
@@ -50,6 +58,35 @@
                         </div>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <h2 class="center-align">Our current most popular terms</h2>
+            </div>
+        </div>
+        {% for term in popular_terms %}
+            <div class="row">
+                <div class="col s12">
+                    <span class="term-name">{{ term.term_name }}</span>
+                </div>
+                <div class="col s12">
+                    <span>{{ term.term_definition }}</span>
+                </div>
+                <div class="col s12">
+                    {% if term.score >= 20 %}
+                        <span class="superscore">{{ term.score }}</span>
+                    {% else %}
+                        <span class="score">{{ term.score }}</span>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}
+        <div class="row center-align">
+            <div class="col s12">
+                <a href="{{ url_for('view_dictionary') }}" class="btn-large blue">View full dictionary</a>
             </div>
         </div>
     </div>
