added redirect conditions to several views so users can't access these pages if not logged in

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,7 @@ nav .brand-logo {
     background-color: rgba(255, 0, 0, 0.7);
     margin: 0 25vw;
     width: 50%;
+    z-index: 9999;
 }
 
 .flash-message {
