--- a/templates/add_definition.html
+++ b/templates/add_definition.html
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-dumbbell prefix"></i>                
-                        <input id="term_name" name="term_name" type="text" minlength="2" maxlength="50" class="validate">
+                        <input id="term_name" name="term_name" type="text" minlength="2" maxlength="50" pattern="([^\s][A-z0-9À-ž\s]+)" class="validate" required>
                         <label for="category_name">Term name</label>
                     </div>
                 </div>
