--- a/templates/edit_term.html
+++ b/templates/edit_term.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-dumbbell prefix"></i>                
-                        <input id="term_name" name="term_name" value="{{ term.term_name }}" type="text" minlength="2" maxlength="50" class="validate">
+                        <input id="term_name" name="term_name" value="{{ term.term_name }}" type="text" minlength="2" maxlength="50" pattern="([^\s][A-z0-9À-ž\s]+)" class="validate" required>
                         <label for="category_name">Term name</label>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-pencil-alt prefix"></i>
-                        <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" required>{{ term.term_definition }}</textarea>
+                        <textarea id="term_definition" name="term_definition" minlength="10" class="materialize-textarea validate" required>{{- term.term_definition -}}</textarea>
                         <label for="term_definition">Term definition</label>
                     </div>
                 </div>
