--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col s12">
                 <a name="search"></a>
-                <form method="POST" action="{{ url_for('search') }}">
+                <form id="search_bar" method="POST" action="{{ url_for('search') }}">
                     <div class="row">
                         <div class="input-field col s12 m7 l8">
                             <i class="fas fa-search prefix"></i>
@@ -51,7 +51,7 @@
                             <label for="query">Search</label>
                         </div>
                         <div class="col s12 m5 l4 search-buttons">
-                            <a href="{{ url_for('home_page') }}" class="red btn">Reset</a>
+                            <a onclick="resetSearch()" class="red btn">Reset</a>
                             <button type="submit" class="btn teal">
                                 Search
                             </button>
