--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -79,9 +79,18 @@
                         {% if session.user|lower == "admin" or session.user|lower == term.created_by|lower %}
                             <div class="row">
                                 <div class="col s6">
-                                    <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn-small delete right red">
+                                    <a href="#modal_dictionary" class="btn-small delete right red modal-trigger">
                                         <span>Delete term</span><i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
                                     </a>
+                                    <div id="modal_dictionary" class="modal">
+                                        <div class="modal-content">
+                                            <p>Are you sure you want to delete this term&#63;</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <a href="{{ url_for('view_dictionary') }}" class="btn grey">Cancel</a>
+                                            <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red ">Delete</a>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col s6">
                                     <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small edit blue">
