--- a/templates/index.html
+++ b/templates/index.html
@@ -112,16 +112,16 @@
                             <a href="{{ url_for('edit_term', term_id=term._id) }}" class="btn-small blue">
                                 <i class="fas fa-edit tooltipped" data-tooltip="EDIT TERM"></i>
                             </a>
-                            <a href="#modal_home" class="btn-small red modal-trigger">
+                            <a href="#{{ term._id }}" class="btn-small red modal-trigger">
                                 <i class="fas fa-trash-alt tooltipped" data-tooltip="DELETE TERM"></i>
                             </a>
-                            <div id="modal_home" class="modal">
+                            <div id="{{ term._id }}" class="modal">
                                 <div class="modal-content">
-                                    <p>Are you sure you want to delete this term&#63;</p>
+                                    <p>Are you sure you want to delete the term {{ term.term_name }}&#63;</p>
                                 </div>
                                 <div class="modal-footer">
                                     <a href="{{ url_for('home_page') }}" class="btn grey">Cancel</a>
-                                    <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red ">Delete</a>
+                                    <a href="{{ url_for('delete_term', term_id=term._id) }}" class="btn red">Delete</a>
                                 </div>
                             </div>
                         </div>
